k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dc-elastic-demo-backend
  labels:
    app: dc-elastic-demo-backend
    division: "field"
    org: "sa"
    keep-until: "2025-04-01"
    team: "amer-commercial"
    project: "davidcastillo"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dc-elastic-demo-backend
  template:
    metadata:
      labels:
        app: dc-elastic-demo-backend
        division: "field"
        org: "sa"
        keep-until: "2025-04-01"
        team: "amer-commercial"
        project: "davidcastillo"
    spec:
      containers:
      - name: backend
        image: gcr.io/elastic-sa/dc-elastic-demo-backend:latest
        ports:
        - containerPort: 5000
